[gd_scene load_steps=25 format=2]

[ext_resource path="res://Bat/Bat.gd" type="Script" id=1]
[ext_resource path="res://Bat/batstag1.png" type="Texture" id=2]
[ext_resource path="res://Bat/batstag2.png" type="Texture" id=3]
[ext_resource path="res://Bat/batstag3.png" type="Texture" id=4]
[ext_resource path="res://Bat/batstag4.png" type="Texture" id=5]
[ext_resource path="res://Bat/bat1.png" type="Texture" id=6]
[ext_resource path="res://Bat/bat2.png" type="Texture" id=7]
[ext_resource path="res://Bat/bat3.png" type="Texture" id=8]
[ext_resource path="res://Bat/bat4.png" type="Texture" id=9]
[ext_resource path="res://Bat/death_1.png" type="Texture" id=10]
[ext_resource path="res://Bat/death_2.png" type="Texture" id=11]
[ext_resource path="res://Bat/death_3.png" type="Texture" id=12]
[ext_resource path="res://Bat/death_4.png" type="Texture" id=13]
[ext_resource path="res://Bat/death_5.png" type="Texture" id=14]
[ext_resource path="res://Bat/death_6.png" type="Texture" id=15]
[ext_resource path="res://Bat/death_7.png" type="Texture" id=16]
[ext_resource path="res://Bat/States/Stagger.gd" type="Script" id=17]
[ext_resource path="res://Bat/States/Fly.gd" type="Script" id=18]
[ext_resource path="res://Bat/States/Death.gd" type="Script" id=19]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=5]

resource_name = "Death"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=2]

resource_name = "Fly"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Fly" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Stagger"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Stagger" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Stagger",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 16 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
} ]

[node name="Bat" type="KinematicBody2D"]

input_pickable = false
collision_layer = 5
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Energy" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="DamageSpot" type="Position2D" parent="." index="2"]

position = Vector2( 0, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

scale = Vector2( 2, 1.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Pivot" type="Position2D" parent="." index="4"]

[node name="Animation" type="AnimationPlayer" parent="Pivot" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Death = SubResource( 5 )
anims/Fly = SubResource( 2 )
anims/Stagger = SubResource( 3 )
blend_times = [  ]

[node name="Body" type="AnimatedSprite" parent="Pivot" index="1"]

frames = SubResource( 4 )
animation = "Death"
frame = 7

[node name="States" type="Node" parent="." index="5"]

[node name="Stagger" type="Node" parent="States" index="0"]

script = ExtResource( 17 )

[node name="Fly" type="Node" parent="States" index="1"]

script = ExtResource( 18 )

[node name="Death" type="Node" parent="States" index="2"]

script = ExtResource( 19 )

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="animation_finished" from="Pivot/Animation" to="." method="_on_Animation_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


